Added pytest customizations with config parser, fixtures, and data-driven tests.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,51 @@
 [pytest]
-markers=
-    smoke: smoke tests
-    sanity: sanity tests
-    str: str tests
+
+# --------------------------------------------------
+# Custom markers used in the test suite
+# --------------------------------------------------
+markers =
+    smoke: smoke test cases (basic build validation)
+    sanity: sanity test cases (critical functionality)
+    str: string-related test cases
+
+
+# --------------------------------------------------
+# Default pytest command-line options
+# --------------------------------------------------
+# --maxfail=3 : Stop test execution after 3 failures
+# -v          : Enable verbose output
+addopts = --maxfail=3 -v
+
+
+# --------------------------------------------------
+# Test discovery customization
+# --------------------------------------------------
+
+# Recognize test classes ending with 'Suite'
+python_classes = *Suite
+
+# Recognize test files with the following patterns
+python_files =
+    example_*.py
+    test_*.py
+    check_*.py
+
+# Recognize test functions with these naming patterns
+python_functions =
+    *_test
+    test*
+    *_check
+
+
+# --------------------------------------------------
+# Restrict pytest to search tests only in this path
+# --------------------------------------------------
+testpaths =
+    05_Pytest_Customizations
+
+
+# --------------------------------------------------
+# Automatically apply this fixture to all tests
+# --------------------------------------------------
+#usefixtures =
+#    setup_list123
