Fix pytest-bdd step resolution by centralizing shared steps and removing ambiguous patterns

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,7 @@ markers =
     smoke: smoke test cases (basic build validation)
     sanity: sanity test cases (critical functionality)
     str: string-related test cases
-
+    bddparam: BDD parameterized scenarios
 
 # --------------------------------------------------
 # Default pytest command-line options
@@ -41,7 +41,7 @@ python_functions =
 # Restrict pytest to search tests only in this path
 # --------------------------------------------------
 testpaths =
-    05_Pytest_Customizations
+    06_Pytest_BDD
 
 
 # --------------------------------------------------
@@ -49,3 +49,5 @@ testpaths =
 # --------------------------------------------------
 #usefixtures =
 #    setup_list123
+
+
